fix height on safari for iOS for stats (#6)
* fix height

* replacement package-lock

--- a/components/Table.module.css
+++ b/components/Table.module.css
@@ -1,5 +1,6 @@
 .table {
 	display: flex;
+	align-items: center;
 	margin-bottom: 2.5rem;
 	justify-content: space-evenly;
 }
